@@ -1,3 +1,13 @@
+2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>
+
+ 	* include/unknwn.h: Include windows.h and ole2.h before header
+	guard to avoid circular inclusion of COM headers.
+
+2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>
+
+	* include/dde.h (PackDDElParam, UnpackDDElParam,FreeDDElParam,
+	ReuseDDElParam): Use __WIN64 compatible typedefs.
+
 2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>
 
 	* include/accctrl.h (ACTRL_ACCESS_ENTRY[AW]): Make
